Added on the fly phone

--- a/projects/frontend/src/app/messages/messages.component.html
+++ b/projects/frontend/src/app/messages/messages.component.html
@@ -1,1 +1,1 @@
-<div *ngFor="let message of (messages$ | async)"><a [href]="setMessage(message)">{{message.text}}</a></div>
+<app-list [messages]="messages$ | async" [phone]="phone$ | async"></app-list>
