Here's a way to set the text

--- a/projects/frontend/src/app/messages/list/list.component.html
+++ b/projects/frontend/src/app/messages/list/list.component.html
@@ -1,4 +1,4 @@
 <div *ngFor="let message of messages">
-  <a [href]="setMessage(message)">{{message.text}}</a>
+  <div (click)="onSelect(message)">{{message.text}}</div>
 </div>
 
