--- a/projects/frontend/src/app/messages/messages.component.html
+++ b/projects/frontend/src/app/messages/messages.component.html
@@ -1,1 +1,3 @@
-<app-list [messages]="messages$ | async" [phone]="phone$ | async"></app-list>
+<app-list [messages]="messages$ | async" (selectMessage)="onSelected($event)"></app-list>
+<app-select [message]="selectedMessage" (send)="onSend($event)" [phone]="phone$ | async" ></app-select>
+<a *ngIf="smsLink" [href]="smsLink" #smsLinkRef >Click to Send SMS</a>
