--- a/projects/frontend/src/app/messages/select/select.component.html
+++ b/projects/frontend/src/app/messages/select/select.component.html
@@ -3,8 +3,13 @@
     <label for="message-text">Message Text</label>
     <textarea id="message-text" formControlName="text"></textarea>
   </div>
-  <div><input type="checkbox" id="add" formControlName="add"><label for="add">Add</label></div>
-  <div><input type="checkbox" id="update" formControlName="update"><label for="update">Update</label></div>
+  <div>
+    <label for="action">Action?</label>
+    <select name="action" id="action" formControlName="action">
+    <option value="">[no action]</option>
+    <option value="add">add</option>
+    <option value="update">update</option>
+  </select></div>
   <div>
     <button type="submit">Set text</button>
   </div>
