--- a/projects/frontend/src/app/messages/select/select.component.html
+++ b/projects/frontend/src/app/messages/select/select.component.html
@@ -11,6 +11,6 @@
     <option value="update">update</option>
   </select></div>
   <div>
-    <button type="submit">Set text</button>
+    <button type="submit">Send text</button>
   </div>
 </form>
