--- a/projects/frontend/src/app/app.component.html
+++ b/projects/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>Daily Comms</h1>
+<h1 class="text-3xl font-bold underline mb-3">Daily Comms</h1>
 <app-phone></app-phone>
 <app-messages></app-messages>
