Using openprops instead...much better

--- a/projects/frontend/src/app/app.component.html
+++ b/projects/frontend/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1 class="text-3xl font-bold underline mb-3">Daily Comms</h1>
-<app-phone></app-phone>
-<app-messages></app-messages>
+<div class="page">
+  <header>
+    <div class="container"><h1>Daily Comms</h1></div>
+  </header>
+  <div class="container">
+    <app-phone></app-phone>
+  </div>
+  <div class="container">
+    <app-messages></app-messages>
+  </div>
+</div>
