--- a/projects/frontend/src/app/messages/list/list.component.html
+++ b/projects/frontend/src/app/messages/list/list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let message of messages">
+<div *ngFor="let message of messages" class="message">
   <button type="button" (click)="onSelect(message)">{{message.text}}</button>
 </div>
 
