--- a/projects/frontend/src/app/messages/select/select.component.html
+++ b/projects/frontend/src/app/messages/select/select.component.html
@@ -5,7 +5,7 @@
   </div>
   <div>
     <label for="action">Action?</label>
-    <select name="action" id="action" formControlName="action">
+    <select name="action" id="action" formControlName="action" class="rounded-full">
     <option value="">[no action]</option>
     <option value="add">add</option>
     <option value="update">update</option>
